// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CircularProgress in RTL renders Colors 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        dir="rtl"
      >
        <svg
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="75"
          font-size="2.5rem"
          role="progressbar"
          style="width: 1em; height: 1em; vertical-align: middle;"
          viewBox="0 0 100 100"
        >
          <path
            class="stroke-[0.5rem] stroke-trunks"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
          />
          <path
            class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="transition: stroke-dashoffset 0.5s ease 0s; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
          />
        </svg>
        <svg
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="75"
          font-size="2.5rem"
          role="progressbar"
          style="width: 1em; height: 1em; vertical-align: middle;"
          viewBox="0 0 100 100"
        >
          <path
            class="stroke-[0.5rem] stroke-whis"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
          />
          <path
            class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-dodoria"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="transition: stroke-dashoffset 0.5s ease 0s; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
          />
        </svg>
        <svg
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="75"
          font-size="2.5rem"
          role="progressbar"
          style="width: 1em; height: 1em; vertical-align: middle;"
          viewBox="0 0 100 100"
        >
          <path
            class="stroke-[0.5rem] stroke-trunks/[.24]"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
          />
          <path
            class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-roshi"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="transition: stroke-dashoffset 0.5s ease 0s; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
          />
        </svg>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      dir="rtl"
    >
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        font-size="2.5rem"
        role="progressbar"
        style="width: 1em; height: 1em; vertical-align: middle;"
        viewBox="0 0 100 100"
      >
        <path
          class="stroke-[0.5rem] stroke-trunks"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="transition: stroke-dashoffset 0.5s ease 0s; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
        />
      </svg>
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        font-size="2.5rem"
        role="progressbar"
        style="width: 1em; height: 1em; vertical-align: middle;"
        viewBox="0 0 100 100"
      >
        <path
          class="stroke-[0.5rem] stroke-whis"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-dodoria"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="transition: stroke-dashoffset 0.5s ease 0s; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
        />
      </svg>
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        font-size="2.5rem"
        role="progressbar"
        style="width: 1em; height: 1em; vertical-align: middle;"
        viewBox="0 0 100 100"
      >
        <path
          class="stroke-[0.5rem] stroke-trunks/[.24]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-roshi"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="transition: stroke-dashoffset 0.5s ease 0s; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
        />
      </svg>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CircularProgress in RTL renders Default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        dir="rtl"
      >
        <svg
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          font-size="2.5rem"
          role="progressbar"
          style="width: 1em; height: 1em; vertical-align: middle;"
          viewBox="0 0 100 100"
        >
          <path
            class="stroke-[0.5rem] stroke-trunks/[.24]"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
          />
          <path
            class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="transition: none; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 289.02652413026095px; fill-opacity: 0;"
          />
        </svg>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      dir="rtl"
    >
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        font-size="2.5rem"
        role="progressbar"
        style="width: 1em; height: 1em; vertical-align: middle;"
        viewBox="0 0 100 100"
      >
        <path
          class="stroke-[0.5rem] stroke-trunks/[.24]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="transition: none; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 289.02652413026095px; fill-opacity: 0;"
        />
      </svg>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CircularProgress in RTL renders Sizes 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        dir="rtl"
      >
        <svg
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="75"
          font-size="1rem"
          role="progressbar"
          style="width: 1em; height: 1em; vertical-align: middle;"
          viewBox="0 0 100 100"
        >
          <path
            class="stroke-[0.5rem] stroke-trunks/[.24]"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
          />
          <path
            class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="transition: stroke-dashoffset 0.5s ease 0s; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
          />
        </svg>
        <svg
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="75"
          font-size="1.5rem"
          role="progressbar"
          style="width: 1em; height: 1em; vertical-align: middle;"
          viewBox="0 0 100 100"
        >
          <path
            class="stroke-[0.5rem] stroke-trunks/[.24]"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
          />
          <path
            class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="transition: stroke-dashoffset 0.5s ease 0s; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
          />
        </svg>
        <svg
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="75"
          font-size="2rem"
          role="progressbar"
          style="width: 1em; height: 1em; vertical-align: middle;"
          viewBox="0 0 100 100"
        >
          <path
            class="stroke-[0.5rem] stroke-trunks/[.24]"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
          />
          <path
            class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="transition: stroke-dashoffset 0.5s ease 0s; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
          />
        </svg>
        <svg
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="75"
          font-size="2.5rem"
          role="progressbar"
          style="width: 1em; height: 1em; vertical-align: middle;"
          viewBox="0 0 100 100"
        >
          <path
            class="stroke-[0.5rem] stroke-trunks/[.24]"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
          />
          <path
            class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="transition: stroke-dashoffset 0.5s ease 0s; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
          />
        </svg>
        <svg
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="75"
          font-size="3rem"
          role="progressbar"
          style="width: 1em; height: 1em; vertical-align: middle;"
          viewBox="0 0 100 100"
        >
          <path
            class="stroke-[0.5rem] stroke-trunks/[.24]"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
          />
          <path
            class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="transition: stroke-dashoffset 0.5s ease 0s; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
          />
        </svg>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      dir="rtl"
    >
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        font-size="1rem"
        role="progressbar"
        style="width: 1em; height: 1em; vertical-align: middle;"
        viewBox="0 0 100 100"
      >
        <path
          class="stroke-[0.5rem] stroke-trunks/[.24]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="transition: stroke-dashoffset 0.5s ease 0s; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
        />
      </svg>
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        font-size="1.5rem"
        role="progressbar"
        style="width: 1em; height: 1em; vertical-align: middle;"
        viewBox="0 0 100 100"
      >
        <path
          class="stroke-[0.5rem] stroke-trunks/[.24]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="transition: stroke-dashoffset 0.5s ease 0s; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
        />
      </svg>
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        font-size="2rem"
        role="progressbar"
        style="width: 1em; height: 1em; vertical-align: middle;"
        viewBox="0 0 100 100"
      >
        <path
          class="stroke-[0.5rem] stroke-trunks/[.24]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="transition: stroke-dashoffset 0.5s ease 0s; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
        />
      </svg>
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        font-size="2.5rem"
        role="progressbar"
        style="width: 1em; height: 1em; vertical-align: middle;"
        viewBox="0 0 100 100"
      >
        <path
          class="stroke-[0.5rem] stroke-trunks/[.24]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="transition: stroke-dashoffset 0.5s ease 0s; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
        />
      </svg>
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        font-size="3rem"
        role="progressbar"
        style="width: 1em; height: 1em; vertical-align: middle;"
        viewBox="0 0 100 100"
      >
        <path
          class="stroke-[0.5rem] stroke-trunks/[.24]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="transition: stroke-dashoffset 0.5s ease 0s; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
        />
      </svg>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CircularProgress in RTL renders Values 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        dir="rtl"
      >
        <svg
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="25"
          font-size="2.5rem"
          role="progressbar"
          style="width: 1em; height: 1em; vertical-align: middle;"
          viewBox="0 0 100 100"
        >
          <path
            class="stroke-[0.5rem] stroke-trunks/[.24]"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
          />
          <path
            class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="transition: stroke-dashoffset 0.5s ease 0s; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 216.76989309769573px; fill-opacity: 0;"
          />
        </svg>
        <svg
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="50"
          font-size="2.5rem"
          role="progressbar"
          style="width: 1em; height: 1em; vertical-align: middle;"
          viewBox="0 0 100 100"
        >
          <path
            class="stroke-[0.5rem] stroke-trunks/[.24]"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
          />
          <path
            class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="transition: stroke-dashoffset 0.5s ease 0s; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 144.51326206513048px; fill-opacity: 0;"
          />
        </svg>
        <svg
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="75"
          font-size="2.5rem"
          role="progressbar"
          style="width: 1em; height: 1em; vertical-align: middle;"
          viewBox="0 0 100 100"
        >
          <path
            class="stroke-[0.5rem] stroke-trunks/[.24]"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
          />
          <path
            class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="transition: stroke-dashoffset 0.5s ease 0s; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
          />
        </svg>
        <svg
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="100"
          font-size="2.5rem"
          role="progressbar"
          style="width: 1em; height: 1em; vertical-align: middle;"
          viewBox="0 0 100 100"
        >
          <path
            class="stroke-[0.5rem] stroke-trunks/[.24]"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
          />
          <path
            class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="transition: stroke-dashoffset 0.5s ease 0s; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
          />
        </svg>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      dir="rtl"
    >
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="25"
        font-size="2.5rem"
        role="progressbar"
        style="width: 1em; height: 1em; vertical-align: middle;"
        viewBox="0 0 100 100"
      >
        <path
          class="stroke-[0.5rem] stroke-trunks/[.24]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="transition: stroke-dashoffset 0.5s ease 0s; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 216.76989309769573px; fill-opacity: 0;"
        />
      </svg>
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        font-size="2.5rem"
        role="progressbar"
        style="width: 1em; height: 1em; vertical-align: middle;"
        viewBox="0 0 100 100"
      >
        <path
          class="stroke-[0.5rem] stroke-trunks/[.24]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="transition: stroke-dashoffset 0.5s ease 0s; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 144.51326206513048px; fill-opacity: 0;"
        />
      </svg>
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        font-size="2.5rem"
        role="progressbar"
        style="width: 1em; height: 1em; vertical-align: middle;"
        viewBox="0 0 100 100"
      >
        <path
          class="stroke-[0.5rem] stroke-trunks/[.24]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="transition: stroke-dashoffset 0.5s ease 0s; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
        />
      </svg>
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="100"
        font-size="2.5rem"
        role="progressbar"
        style="width: 1em; height: 1em; vertical-align: middle;"
        viewBox="0 0 100 100"
      >
        <path
          class="stroke-[0.5rem] stroke-trunks/[.24]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="transition: stroke-dashoffset 0.5s ease 0s; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
      </svg>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CircularProgress renders Colors 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        font-size="2.5rem"
        role="progressbar"
        style="width: 1em; height: 1em; vertical-align: middle;"
        viewBox="0 0 100 100"
      >
        <path
          class="stroke-[0.5rem] stroke-trunks"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="transition: stroke-dashoffset 0.5s ease 0s; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
        />
      </svg>
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        font-size="2.5rem"
        role="progressbar"
        style="width: 1em; height: 1em; vertical-align: middle;"
        viewBox="0 0 100 100"
      >
        <path
          class="stroke-[0.5rem] stroke-whis"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-dodoria"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="transition: stroke-dashoffset 0.5s ease 0s; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
        />
      </svg>
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        font-size="2.5rem"
        role="progressbar"
        style="width: 1em; height: 1em; vertical-align: middle;"
        viewBox="0 0 100 100"
      >
        <path
          class="stroke-[0.5rem] stroke-trunks/[.24]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-roshi"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="transition: stroke-dashoffset 0.5s ease 0s; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
        />
      </svg>
    </div>
  </body>,
  "container": <div>
    <svg
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="75"
      font-size="2.5rem"
      role="progressbar"
      style="width: 1em; height: 1em; vertical-align: middle;"
      viewBox="0 0 100 100"
    >
      <path
        class="stroke-[0.5rem] stroke-trunks"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
      />
      <path
        class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="transition: stroke-dashoffset 0.5s ease 0s; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
      />
    </svg>
    <svg
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="75"
      font-size="2.5rem"
      role="progressbar"
      style="width: 1em; height: 1em; vertical-align: middle;"
      viewBox="0 0 100 100"
    >
      <path
        class="stroke-[0.5rem] stroke-whis"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
      />
      <path
        class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-dodoria"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="transition: stroke-dashoffset 0.5s ease 0s; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
      />
    </svg>
    <svg
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="75"
      font-size="2.5rem"
      role="progressbar"
      style="width: 1em; height: 1em; vertical-align: middle;"
      viewBox="0 0 100 100"
    >
      <path
        class="stroke-[0.5rem] stroke-trunks/[.24]"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
      />
      <path
        class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-roshi"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="transition: stroke-dashoffset 0.5s ease 0s; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
      />
    </svg>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CircularProgress renders Default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        font-size="2.5rem"
        role="progressbar"
        style="width: 1em; height: 1em; vertical-align: middle;"
        viewBox="0 0 100 100"
      >
        <path
          class="stroke-[0.5rem] stroke-trunks/[.24]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="transition: none; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 289.02652413026095px; fill-opacity: 0;"
        />
      </svg>
    </div>
  </body>,
  "container": <div>
    <svg
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      font-size="2.5rem"
      role="progressbar"
      style="width: 1em; height: 1em; vertical-align: middle;"
      viewBox="0 0 100 100"
    >
      <path
        class="stroke-[0.5rem] stroke-trunks/[.24]"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
      />
      <path
        class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="transition: none; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 289.02652413026095px; fill-opacity: 0;"
      />
    </svg>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CircularProgress renders Sizes 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        font-size="1rem"
        role="progressbar"
        style="width: 1em; height: 1em; vertical-align: middle;"
        viewBox="0 0 100 100"
      >
        <path
          class="stroke-[0.5rem] stroke-trunks/[.24]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="transition: stroke-dashoffset 0.5s ease 0s; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
        />
      </svg>
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        font-size="1.5rem"
        role="progressbar"
        style="width: 1em; height: 1em; vertical-align: middle;"
        viewBox="0 0 100 100"
      >
        <path
          class="stroke-[0.5rem] stroke-trunks/[.24]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="transition: stroke-dashoffset 0.5s ease 0s; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
        />
      </svg>
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        font-size="2rem"
        role="progressbar"
        style="width: 1em; height: 1em; vertical-align: middle;"
        viewBox="0 0 100 100"
      >
        <path
          class="stroke-[0.5rem] stroke-trunks/[.24]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="transition: stroke-dashoffset 0.5s ease 0s; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
        />
      </svg>
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        font-size="2.5rem"
        role="progressbar"
        style="width: 1em; height: 1em; vertical-align: middle;"
        viewBox="0 0 100 100"
      >
        <path
          class="stroke-[0.5rem] stroke-trunks/[.24]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="transition: stroke-dashoffset 0.5s ease 0s; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
        />
      </svg>
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        font-size="3rem"
        role="progressbar"
        style="width: 1em; height: 1em; vertical-align: middle;"
        viewBox="0 0 100 100"
      >
        <path
          class="stroke-[0.5rem] stroke-trunks/[.24]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="transition: stroke-dashoffset 0.5s ease 0s; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
        />
      </svg>
    </div>
  </body>,
  "container": <div>
    <svg
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="75"
      font-size="1rem"
      role="progressbar"
      style="width: 1em; height: 1em; vertical-align: middle;"
      viewBox="0 0 100 100"
    >
      <path
        class="stroke-[0.5rem] stroke-trunks/[.24]"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
      />
      <path
        class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="transition: stroke-dashoffset 0.5s ease 0s; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
      />
    </svg>
    <svg
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="75"
      font-size="1.5rem"
      role="progressbar"
      style="width: 1em; height: 1em; vertical-align: middle;"
      viewBox="0 0 100 100"
    >
      <path
        class="stroke-[0.5rem] stroke-trunks/[.24]"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
      />
      <path
        class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="transition: stroke-dashoffset 0.5s ease 0s; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
      />
    </svg>
    <svg
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="75"
      font-size="2rem"
      role="progressbar"
      style="width: 1em; height: 1em; vertical-align: middle;"
      viewBox="0 0 100 100"
    >
      <path
        class="stroke-[0.5rem] stroke-trunks/[.24]"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
      />
      <path
        class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="transition: stroke-dashoffset 0.5s ease 0s; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
      />
    </svg>
    <svg
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="75"
      font-size="2.5rem"
      role="progressbar"
      style="width: 1em; height: 1em; vertical-align: middle;"
      viewBox="0 0 100 100"
    >
      <path
        class="stroke-[0.5rem] stroke-trunks/[.24]"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
      />
      <path
        class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="transition: stroke-dashoffset 0.5s ease 0s; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
      />
    </svg>
    <svg
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="75"
      font-size="3rem"
      role="progressbar"
      style="width: 1em; height: 1em; vertical-align: middle;"
      viewBox="0 0 100 100"
    >
      <path
        class="stroke-[0.5rem] stroke-trunks/[.24]"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
      />
      <path
        class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="transition: stroke-dashoffset 0.5s ease 0s; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
      />
    </svg>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CircularProgress renders Values 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="25"
        font-size="2.5rem"
        role="progressbar"
        style="width: 1em; height: 1em; vertical-align: middle;"
        viewBox="0 0 100 100"
      >
        <path
          class="stroke-[0.5rem] stroke-trunks/[.24]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="transition: stroke-dashoffset 0.5s ease 0s; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 216.76989309769573px; fill-opacity: 0;"
        />
      </svg>
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        font-size="2.5rem"
        role="progressbar"
        style="width: 1em; height: 1em; vertical-align: middle;"
        viewBox="0 0 100 100"
      >
        <path
          class="stroke-[0.5rem] stroke-trunks/[.24]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="transition: stroke-dashoffset 0.5s ease 0s; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 144.51326206513048px; fill-opacity: 0;"
        />
      </svg>
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        font-size="2.5rem"
        role="progressbar"
        style="width: 1em; height: 1em; vertical-align: middle;"
        viewBox="0 0 100 100"
      >
        <path
          class="stroke-[0.5rem] stroke-trunks/[.24]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="transition: stroke-dashoffset 0.5s ease 0s; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
        />
      </svg>
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="100"
        font-size="2.5rem"
        role="progressbar"
        style="width: 1em; height: 1em; vertical-align: middle;"
        viewBox="0 0 100 100"
      >
        <path
          class="stroke-[0.5rem] stroke-trunks/[.24]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="transition: stroke-dashoffset 0.5s ease 0s; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
      </svg>
    </div>
  </body>,
  "container": <div>
    <svg
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="25"
      font-size="2.5rem"
      role="progressbar"
      style="width: 1em; height: 1em; vertical-align: middle;"
      viewBox="0 0 100 100"
    >
      <path
        class="stroke-[0.5rem] stroke-trunks/[.24]"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
      />
      <path
        class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="transition: stroke-dashoffset 0.5s ease 0s; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 216.76989309769573px; fill-opacity: 0;"
      />
    </svg>
    <svg
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      font-size="2.5rem"
      role="progressbar"
      style="width: 1em; height: 1em; vertical-align: middle;"
      viewBox="0 0 100 100"
    >
      <path
        class="stroke-[0.5rem] stroke-trunks/[.24]"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
      />
      <path
        class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="transition: stroke-dashoffset 0.5s ease 0s; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 144.51326206513048px; fill-opacity: 0;"
      />
    </svg>
    <svg
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="75"
      font-size="2.5rem"
      role="progressbar"
      style="width: 1em; height: 1em; vertical-align: middle;"
      viewBox="0 0 100 100"
    >
      <path
        class="stroke-[0.5rem] stroke-trunks/[.24]"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
      />
      <path
        class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="transition: stroke-dashoffset 0.5s ease 0s; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
      />
    </svg>
    <svg
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="100"
      font-size="2.5rem"
      role="progressbar"
      style="width: 1em; height: 1em; vertical-align: middle;"
      viewBox="0 0 100 100"
    >
      <path
        class="stroke-[0.5rem] stroke-trunks/[.24]"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
      />
      <path
        class="stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="transition: stroke-dashoffset 0.5s ease 0s; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
      />
    </svg>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
